<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChooseModeFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_alignParentTop="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_are_you_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"/>

                <TextView
                    android:text="@string/select_mode_description"
                    android:textColor="@color/colorTextSecondary"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_alignParentBottom="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/passengerButton"
                    style="@style/Widget.TaxiApp.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_button_text"
                    android:textSize="20sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/driverButton"
                    style="@style/Widget.TaxiApp.ButtonInverted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_button_text"
                    android:textSize="20sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signOutButton"
                    style="@style/Widget.TaxiApp.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sign_out_button_text"
                    android:textSize="16sp"/>

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>