<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.datafrey.taxiapp.userstatus.SignInViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".userstatus.SignInFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/signInCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_alignParentTop="true">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/authorization_title"
                            android:textSize="25sp"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ProgressBar
                            android:id="@+id/authorizationProgressBar"
                            android:layout_marginStart="5dp"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:visibility="@{viewModel.authorizationProgressBarVisibility}"/>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/Widget.TaxiApp.TextInputLayout"
                        app:errorEnabled="true"
                        errorMessage="@{viewModel.userEmailInputErrorMessage}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email_field_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/Widget.TaxiApp.TextInputLayout"
                        app:errorEnabled="true"
                        errorMessage="@{viewModel.userPasswordInputErrorMessage}"
                        app:passwordToggleEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_field_hint"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputConfirmPassword"
                        style="@style/Widget.TaxiApp.TextInputLayout"
                        app:errorEnabled="true"
                        errorMessage="@{viewModel.userConfirmPasswordInputErrorMessage}"
                        app:passwordToggleEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.textInputConfirmPasswordVisibility}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password_field_hint"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/Widget.TaxiApp.TextInputLayout"
                        app:errorEnabled="true"
                        errorMessage="@{viewModel.userNameInputErrorMessage}"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.textInputNameVisibility}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_field_hint"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_alignParentBottom="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signInSignUpButton"
                        style="@style/Widget.TaxiApp.Button"
                        android:text="@{viewModel.signInSignUpButtonText}"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/toggleSignInSignUpButton"
                        style="@style/Widget.TaxiApp.Button.TextButton"
                        android:text="@{viewModel.toggleSignInSignUpButtonText}"
                        android:textSize="16sp"
                        android:onClick="@{() -> viewModel.toggleAuthorizationMode()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>
</layout>